[package]
name = "ops-tool"
version = "0.2.0"
authors = ["Iain Earl <synapse791@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dirs = "2.0"
regex = "1.3"
reqwest =  { version = "0.10", features = ["blocking"] }
semver = "0.9"
zip = "0.5"
