[package]
authors = ["Iain Earl <synapse791@gmail.com>"]
edition = "2018"
name = "ops-tool"
version = "0.2.0"

[dependencies]
indicatif = "0.15.0"
anyhow = "1.0.33"
zip = "0.5.8"
url = "2.1.1"
structopt = "0.3.20"
dirs = "3.0.1"

[dependencies.reqwest]
version = "0.10.8"
default-features = false
features = ["blocking", "native-tls-vendored"]
