[package]
authors = ["Iain Earl <synapse791@gmail.com>"]
edition = "2018"
name = "ops-tool"
version = "0.2.0"

[dependencies]
indicatif = "0.15.0"
anyhow = "1.0.33"
zip = "0.5.8"
url = "2.1.1"
structopt = "0.3.20"
dirs = "3.0.1"
log = "0.4.11"
env_logger = "0.8.1"

[dependencies.reqwest]
version = "0.10.9"
default-features = false
features = ["blocking", "json", "native-tls-vendored"]

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
